@startuml

entity Users {
  IdUser : int
  Name : string
  Email : string
  MotDePasse : string
}

entity CoworkingSpace {
  IdCoworkingSpace : int
  Name : string
  Description : string
  Adress : string
}

entity Comment {
  IdComment : int
  Content : string
}

entity Reservation {
  IdReservation : int
  DateReservation : date
}

Users -- Comment : Add
Users -- Reservation : Book
Comment -- CoworkingSpace : PostedOn
Reservation -- CoworkingSpace : PorteSur

@enduml
